fixed bg on iOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,15 @@
 .background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 50%;
   background-image: url("../images/bg.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  height: 100vh;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 
 @media (max-width: 550px) {
